--- a/g6/package.json
+++ b/g6/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "g6",
+  "name": "y",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "fangyuxi <fangyuxi@huatu.com>",
+  "author": "fangyuxi <2295586512@qq.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@antv/g6": "^3.5.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
